--- a/Codechef/.vscode/settings.json
+++ b/Codechef/.vscode/settings.json
@@ -27,5 +27,15 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "files.associations": {
+    "*.tcc": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "vector": "cpp",
+    "ostream": "cpp"
+  }
 }
