--- a/Codechef/.vscode/settings.json
+++ b/Codechef/.vscode/settings.json
@@ -36,6 +36,7 @@
     "unordered_map": "cpp",
     "unordered_set": "cpp",
     "vector": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "iostream": "cpp"
   }
 }
